--- a/js06-listas.html
+++ b/js06-listas.html
@@ -10,7 +10,7 @@
 		console.log(lista[1]);
 		*/
 		
-		var lista=[1,2,3];
+		lista=[1,2,3];
 		console.log(lista.length);
 
 		var lista2=[[1,2,3],['a','b','c']];
